log
Fri 14 Apr 2023 03:41:04 AM UTC: 
 tests:  0|6
total_score: 0/70
077bf9f
Tue 04 Jul 2023 03:43:07 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:12: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |   HashMap* map = malloc(sizeof(HashMap));
      |            ^~~
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f491cc3
Tue 04 Jul 2023 03:43:18 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e9f359c
Tue 04 Jul 2023 03:43:27 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
74e658f
Tue 04 Jul 2023 03:43:36 AM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
f5810d4
Tue 04 Jul 2023 03:48:27 AM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:76:16: error: unused variable ‘index’ [-Werror=unused-variable]
   76 |   unsigned int index = hash(key, map->capacity);
      |                ^~~~~
cc1: all warnings being treated as errors
Compilation failed
50a2b72
